# drifters

./: .gitignore  AI_CONTRIBUTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TESTING.md  TODO.md  dist-workspace.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: attach-checksum.yml  release.yml
docs/: EDITING_SYNC_RULES.md  IMPORT_EXPORT.md  QUICK_START.md  README.md
docs/adr/: 00-ephemeral-repository-strategy.md  01-verb-object-cli-naming.md  02-system-git-over-git2.md  03-consensus-based-merging.md  04-branch-per-machine.md  05-selective-merge-and-no-merge.md
examples/: sync-rules-complete.toml  sync-rules.toml
presets/: README.md  claude-code.toml  cursor.toml  vscode.toml  windsurf.toml  zed.toml
src/: error.rs  main.rs
src/cli/: add.rs  common.rs  completion.rs  diff.rs  edit_app_files.rs  edit_config.rs  edit_rules.rs  exclude.rs  export.rs  history.rs  hook.rs  import.rs  init.rs  list.rs  merge.rs  migrate.rs  mod.rs  open_readme.rs  presets.rs  pull.rs  push.rs  remove.rs  remove_machine.rs  rename_app.rs  rename_machine.rs  restore.rs  self_update.rs  status.rs  unlock.rs
src/config/: fileset.rs  local.rs  machines.rs  mod.rs  sync_rules.rs
src/git/: ephemeral.rs  mod.rs  operations.rs  repo_layout.rs  safety.rs
src/merge/: apply_rules.rs  conflict.rs  intelligent.rs  mod.rs  three_way.rs
src/parser/: comments.rs  format.rs  mod.rs  sections.rs
src/sync/: diff.rs  first_run.rs  mod.rs  pull.rs  push.rs
src/tui/: diff_viewer.rs  input.rs  mod.rs  theme.rs
