[package]
name = "drifters"
version = "0.1.0"
edition = "2024"
description = "Config file synchronization across machines"
license = "MIT"
repository = "https://github.com/tjirsch/drifters"
# documentation = "https://docs.drifter.rs"
# homepage = "https://drifter.rs"
keywords = ["config", "synchronization", "sync", "config-sync"]
authors = ["Thomas Jirsch"]
categories = ["command-line-utilities", "config"]


[dependencies]
# Core functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI for diffs
ratatui = "0.29"
crossterm = "0.28"

# Git operations
git2 = "0.19"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
hostname = "0.4"

# Diff generation
similar = "2.6"

# File pattern matching
glob = "0.3"

# Self-update / GitHub API
reqwest = { version = "0.12", features = ["blocking", "json"] }

[dev-dependencies]
tempfile = "3.13"
