[package]
name = "drifters"
version = "0.5.4"
edition = "2021"
description = "Config file synchronization across machines"
license = "MIT"
repository = "https://github.com/tjirsch/drifters"
# documentation = "https://docs.drifter.rs"
# homepage = "https://drifter.rs"
keywords = ["config", "synchronization", "sync", "config-sync"]
authors = ["Thomas Jirsch"]
categories = ["command-line-utilities", "config"]


[dependencies]
# Core functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI for diffs
ratatui = "0.29"
crossterm = "0.28"

# Git operations
# "vendored-libgit2" compiles libgit2 from source so CI runners don't need a system install.
# "openssl" with "vendored" statically compiles OpenSSL into the binary so the distributed
# binary has no runtime dependency on Homebrew's libssl (avoids dyld errors on end-user Macs).
git2 = { version = "0.20", features = ["vendored-libgit2"] }
openssl = { version = "0.10", features = ["vendored"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
hostname = "0.4"

# Diff generation
similar = "2.6"

# File pattern matching
glob = "0.3"

# Self-update / GitHub API
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.13"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
